--- a/Security/Data_Classification.mediawiki
+++ b/Security/Data_Classification.mediawiki
@@ -80,35 +80,35 @@ This information, if disclosed beyond the individuals, would have a significant 
 ! <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Public</span>
 
 | Firefox source code <br>
-| Public Github Repositories <br>
-| Public brown bags on AirMozilla <br>
-| Bugzilla bugs without any security/restricted flags <br>
-| Documentation on a wiki or the MDN page <br>
-| Newsletters or announcements made for consumer viewership <br>
+ Public Github Repositories <br>
+ Public brown bags on AirMozilla <br>
+ Bugzilla bugs without any security/restricted flags <br>
+ Documentation on a wiki or the MDN page <br>
+ Newsletters or announcements made for consumer viewership <br>
 |-
 ! <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight:
 bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Staff and NDA'd Mozillians Only</span><br /> or <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight:bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential</span>
 | Information shared in the monthly MoCo/MoFo internal meeting <br>
-| Bugzilla bugs with the "Moco confidential" or "infrastructure" flags <br>
-| Aggregate survey data about Mozilla employees <br>
-| Fox Fooding data for soon to be released products or services <br>
+ Bugzilla bugs with the "Moco confidential" or "infrastructure" flags <br>
+ Aggregate survey data about Mozilla employees <br>
+ Fox Fooding data for soon to be released products or services <br>
 |-
 ! <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight:
 bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Specific Work Groups Only</span><br /> or <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight:bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Workgroup confidential</span>
 | Employee's street address, SSNs, performance data <br>
-| Service passwords/credentials <br>
-| Bugzilla bugs with security or restricted flags <br>
-| Proprietary or protected information, code, libraries from Mozilla partners <br>
-| Contracts or legal documents <br>
-| Unannounced communication materials (dates, visuals, plans) for campaigns, product launches, etc <br>
+ Service passwords/credentials <br>
+ Bugzilla bugs with security or restricted flags <br>
+ Proprietary or protected information, code, libraries from Mozilla partners <br>
+ Contracts or legal documents <br>
+ Unannounced communication materials (dates, visuals, plans) for campaigns, product launches, etc <br>
 |-
 ! <span style="background-color: #d04437; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Specific Individuals Only</span>
 | Firefox release signing keys <br>
-| Specific partner conversations <br>
-| Employee bank account information <br>
-| User/personal passwords/credentials <br>
-| Aquistion roadmaps or decisions <br>
-| [https://www.mozilla.org/en-US/about/governance/policies/participation/ Community Participation Guideline (CPG)] report data. <br>
+ Specific partner conversations <br>
+ Employee bank account information <br>
+ User/personal passwords/credentials <br>
+ Aquistion roadmaps or decisions <br>
+ [https://www.mozilla.org/en-US/about/governance/policies/participation/ Community Participation Guideline (CPG)] report data. <br>
 |-
 |}
 
