--- a/Security/Data_Classification.mediawiki
+++ b/Security/Data_Classification.mediawiki
@@ -13,13 +13,13 @@ margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; 
 
 <br>
 
-We want to emphasize the way we intend this classification scheme is based solely on who the intended audiences of a particular document is meant to be, not based on the content contained within the document.<br>
-
-<br>
-
 The data classification is intended to allow Mozilla to operate effectively in the open while protecting sensitive information.
 
 These data classification levels use the colors of the [[Security/Standard Levels|Standard Levels]]. <br>
+
+<br>
+
+This classification scheme is solely meant to communicate who the intended audiences of a particular file is, not what type of content is contained within the document.<br>
 
 <br>
 
@@ -43,7 +43,7 @@ The Infrastructure Security team maintains this document.
 |-
 |
 When sharing or distributing data, documents, etc. you are responsible for setting and changing a classification label.
-While it is required for all Google Workspace documents, it is strongly advised that you use them with any tools and communications systems where Mozillians may share
+While it is required for all Google Drive documents, it is strongly advised that you use them with any tools and communications systems where Mozillians may share
 information.  (e.g.: text documents, attachments to emails, Matrix topics, and other digital media documents).
 |}
 
@@ -55,17 +55,16 @@ information.  (e.g.: text documents, attachments to emails, Matrix topics, and o
 ! <span style="background-color: #cccccc; border-radius: .25em; color: #000000; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Public</span>
 
 | Data that can be shared with the world.
-The audience of this classification is meant to be for anyone, internal to Mozilla or to the wider public.
+The audience of this data is meant to be anyone, internal to Mozilla or to the wider public.
 |-
 ! <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight:
 bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Staff and NDA'd Mozillians Only</span><br />
-| The audience for this document is to be shared with anyone in Mozilla or any individual/entity with a NDA.
+| The audience of this data is any employee of the Mozilla Foundation, Mozilla Corporation or any other Mozilla subsidiary as well as any individual/entity that has an NDA with Mozilla.
 |-
-! <span style="background-color: #ffd351; border-radius: .25em; color: #ffffff; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Specific Workgroups and Individuals Only</span>
-| '''This classification is a combination of the previous two classifications''' <br> The audience for this document is meant to be limited to only specific workgroups or individuals within Mozilla or outside NDA'd Mozillians only and will not be shared outside of the owners original intent. 
+! <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight: bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Specific Workgroups and Individuals Only</span>
+| The audience of this data is meant to be specific workgroups or specific individuals. A Workgroup is a specific group of people, like a team. Use of this label requires the author to list out each workgroup and/or individual that the data is intended for, somewhere in the file.
 |-
 |}
-
 
 = Examples of data classification =
 
@@ -85,18 +84,18 @@ bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: upper
 ! <span style="background-color: #4a6785; border-radius: .25em; color: #ffffff; display: inline-block; font-weight:
 bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Staff and NDA'd Mozillians Only</span><br /> 
 | 
-* Information shared in the monthly MoCo/MoFo internal meeting 
-* Bugzilla bugs with the "Moco confidential" or "infrastructure" flags 
-* Aggregate survey data about Mozilla employees 
-* Fox Fooding data for soon to be released products or services 
+* Information shared in the monthly MoCo/MoFo internal meeting
+* Bugzilla bugs with the "Moco confidential" or "infrastructure" flags
+* Aggregate survey data about Mozilla employees that is not meant for the public
+* Fox Fooding data for soon to be released products or services which is intended to stay within Mozilla
 |-
 ! <span style="background-color: #ffd351; border-radius: .25em; color: #594300; display: inline-block; font-weight:
 bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: uppercase; text-align: center;">Mozilla Confidential - Specific Workgroups and Individuals Only</span><br /> 
 |
-* Service passwords/credentials 
-* Bugzilla bugs with security or restricted flags 
-* Proprietary or protected information, code, libraries from Mozilla partners 
-* Contracts or legal documents
+* Service passwords/credentials
+* Bugzilla bugs with security or restricted flags
+* Proprietary or protected information, code, libraries from Mozilla partners
+* Contracts or legal documents that can't be shared with all of Mozilla
 * Unannounced communication materials (dates, visuals, plans) for campaigns, product launches, etc
 * Firefox release signing keys
 * Specific partner conversations
@@ -105,7 +104,6 @@ bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: upper
 |-
 |}
 
-
 = Deciding how to classify  =
 
 ''The list of examples of how to label data is not an exhaustive list and serves an an indication on how to ensure the data classification labels are clearly communicated.''
@@ -113,10 +111,10 @@ bold; margin: .1em 0; min-width: 6em; padding: .05em .5em; text-transform: upper
 There are always at least two people involved with exchanging confidential information:
 
 * The '''Owner''' is the person who created the file. The '''Owner''' and '''Discloser''' are often the same person, but not always.
-* The '''Discloser''' is the person who provides/sends the information to the Recipient.
+* The '''Discloser''' is the person who provides/sends/shares the information to the Recipient.
 * The '''Recipient''' is the person who receives the information.
 
-When in doubt, it's always best to classify at the most specific classification. 
+When in doubt, it's always best to classify at the most specific classification.
 
 == All new documents, box.com, etc. ==
 
