--- a/Security/Data_Classification.mediawiki
+++ b/Security/Data_Classification.mediawiki
@@ -123,7 +123,7 @@ using the header feature of the document.
 
 == Google Apps ==
 
-'''Label''' every document (Docs, Sheets, Slides, Drawings, etc.) with its appropriate classification by utilzing the required label functionality and if its not possible, attempt to insert it into the body of the document itself.
+'''Label''' every document (Docs, Sheets, Slides, Drawings, etc.) with its appropriate classification by utilizing the required label functionality.
 * For Docs, we recommend including the label in the header of the document.
 * For Slides, we recommend including the label in the master slide so that it shows on all slides.
 * For Sheets, we recommend creating a dedicated sheet (the tabs at the bottom of the page) either called "Data Classification" or the name of the classification for the entire file. In that new sheet, indicate the data classification.
